<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="Face detector">
        <ListPreference
            android:defaultValue="@string/FDT_MODEL_DIR_DEFAULT"
            android:key="@string/FDT_CHOOSE_PRE_INSTALLED_MODEL_KEY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="Choose pre-installed models" />
        <EditTextPreference
            android:key="@string/FDT_MODEL_DIR_KEY"
            android:defaultValue="@string/FDT_MODEL_DIR_DEFAULT"
            android:title="Model dir" />
        <ListPreference
            android:defaultValue="@string/FDT_CPU_THREAD_NUM_DEFAULT"
            android:key="@string/FDT_CPU_THREAD_NUM_KEY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="CPU thread num"
            android:entries="@array/cpu_thread_num_entries"
            android:entryValues="@array/cpu_thread_num_values"/>
        <ListPreference
            android:defaultValue="@string/FDT_CPU_POWER_MODE_DEFAULT"
            android:key="@string/FDT_CPU_POWER_MODE_KEY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="CPU power mode"
            android:entries="@array/cpu_power_mode_entries"
            android:entryValues="@array/cpu_power_mode_values"/>
        <EditTextPreference
            android:key="@string/FDT_INPUT_SCALE_KEY"
            android:defaultValue="@string/FDT_INPUT_SCALE_DEFAULT"
            android:title="Input scale: downscale factor(0.0, 1.0)" />
        <EditTextPreference
            android:key="@string/FDT_INPUT_MEAN_KEY"
            android:defaultValue="@string/FDT_INPUT_MEAN_DEFAULT"
            android:title="Input mean: (channel/255-mean)/std" />
        <EditTextPreference
            android:key="@string/FDT_INPUT_STD_KEY"
            android:defaultValue="@string/FDT_INPUT_STD_DEFAULT"
            android:title="Input std: (channel/255-mean)/std" />
        <EditTextPreference
            android:key="@string/FDT_SCORE_THRESHOLD_KEY"
            android:defaultValue="@string/FDT_SCORE_THRESHOLD_DEFAULT"
            android:title="Score threshold: (0.0, 1.0)" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Face keypoints detector">
        <ListPreference
            android:defaultValue="@string/FKP_MODEL_DIR_DEFAULT"
            android:key="@string/FKP_CHOOSE_PRE_INSTALLED_MODEL_KEY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="Choose pre-installed models" />
        <EditTextPreference
            android:defaultValue="@string/FKP_MODEL_DIR_DEFAULT"
            android:key="@string/FKP_MODEL_DIR_KEY"
            android:title="Model dir" />
        <ListPreference
            android:defaultValue="@string/FKP_CPU_THREAD_NUM_DEFAULT"
            android:entries="@array/cpu_thread_num_entries"
            android:entryValues="@array/cpu_thread_num_values"
            android:key="@string/FKP_CPU_THREAD_NUM_KEY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="CPU thread num" />
        <ListPreference
            android:defaultValue="@string/FKP_CPU_POWER_MODE_DEFAULT"
            android:entries="@array/cpu_power_mode_entries"
            android:entryValues="@array/cpu_power_mode_values"
            android:key="@string/FKP_CPU_POWER_MODE_KEY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="CPU power mode" />
        <EditTextPreference
            android:defaultValue="@string/FKP_INPUT_WIDTH_DEFAULT"
            android:key="@string/FKP_INPUT_WIDTH_KEY"
            android:title="Input width: downscaled width" />
        <EditTextPreference
            android:defaultValue="@string/FKP_INPUT_HEIGHT_DEFAULT"
            android:key="@string/FKP_INPUT_HEIGHT_KEY"
            android:title="Input height: downscaled height" />
    </PreferenceCategory>
</PreferenceScreen>
